interpreter/PseudocodeParser.py
# Generated from interpreter/Pseudocode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudocodeParser ( Parser ):

    grammarFileName = "Pseudocode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<-'", "'<->'", "';'", "'citeste'", "'scrie'", 
                     "','", "'daca'", "'atunci'", "'altfel'", "'sf'", "'pentru'", 
                     "'executa'", "'cat'", "'timp'", "'repeta'", "'pana'", 
                     "'cand'", "'*'", "'/'", "'%'", "'['", "']'", "'+'", 
                     "'-'", "'\\u221A'", "'='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'SAU'", "'sau'", "'SI'", "'si'", "'NOT'", 
                     "'not'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "NUMBER", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_assign = 2
    RULE_swapStmt = 3
    RULE_multiStmt = 4
    RULE_readStmt = 5
    RULE_writeStmt = 6
    RULE_nameList = 7
    RULE_exprList = 8
    RULE_ifStmt = 9
    RULE_thenBlock = 10
    RULE_elseBlock = 11
    RULE_forStmt = 12
    RULE_whileStmt = 13
    RULE_doWhileStmt = 14
    RULE_repeatStmt = 15
    RULE_expr = 16
    RULE_atom = 17

    ruleNames =  [ "program", "stmt", "assign", "swapStmt", "multiStmt", 
                   "readStmt", "writeStmt", "nameList", "exprList", "ifStmt", 
                   "thenBlock", "elseBlock", "forStmt", "whileStmt", "doWhileStmt", 
                   "repeatStmt", "expr", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    NAME=40
    NUMBER=41
    STRING=42
    WS=43
    COMMENT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PseudocodeParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PseudocodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511675056) != 0):
                self.state = 36
                self.stmt()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(PseudocodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(PseudocodeParser.AssignContext,0)


        def swapStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.SwapStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.ReadStmtContext,0)


        def writeStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.WriteStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.WhileStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.DoWhileStmtContext,0)


        def repeatStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.RepeatStmtContext,0)


        def multiStmt(self):
            return self.getTypedRuleContext(PseudocodeParser.MultiStmtContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PseudocodeParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.swapStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.readStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.writeStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.ifStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.forStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.whileStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 51
                self.doWhileStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 52
                self.repeatStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 53
                self.multiStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PseudocodeParser.NAME, 0)

        def expr(self):
            return self.getTypedRuleContext(PseudocodeParser.ExprContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = PseudocodeParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PseudocodeParser.NAME)
            self.state = 57
            self.match(PseudocodeParser.T__0)
            self.state = 58
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwapStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.NAME)
            else:
                return self.getToken(PseudocodeParser.NAME, i)

        def getRuleIndex(self):
            return PseudocodeParser.RULE_swapStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwapStmt" ):
                listener.enterSwapStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwapStmt" ):
                listener.exitSwapStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwapStmt" ):
                return visitor.visitSwapStmt(self)
            else:
                return visitor.visitChildren(self)




    def swapStmt(self):

        localctx = PseudocodeParser.SwapStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_swapStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(PseudocodeParser.NAME)
            self.state = 61
            self.match(PseudocodeParser.T__1)
            self.state = 62
            self.match(PseudocodeParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.AssignContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.AssignContext,i)


        def swapStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.SwapStmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.SwapStmtContext,i)


        def readStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.ReadStmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.ReadStmtContext,i)


        def writeStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.WriteStmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.WriteStmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_multiStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiStmt" ):
                listener.enterMultiStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiStmt" ):
                listener.exitMultiStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiStmt" ):
                return visitor.visitMultiStmt(self)
            else:
                return visitor.visitChildren(self)




    def multiStmt(self):

        localctx = PseudocodeParser.MultiStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multiStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 64
                self.assign()
                pass

            elif la_ == 2:
                self.state = 65
                self.swapStmt()
                pass

            elif la_ == 3:
                self.state = 66
                self.readStmt()
                pass

            elif la_ == 4:
                self.state = 67
                self.writeStmt()
                pass


            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.match(PseudocodeParser.T__2)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 71
                    self.assign()
                    pass

                elif la_ == 2:
                    self.state = 72
                    self.swapStmt()
                    pass

                elif la_ == 3:
                    self.state = 73
                    self.readStmt()
                    pass

                elif la_ == 4:
                    self.state = 74
                    self.writeStmt()
                    pass


                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nameList(self):
            return self.getTypedRuleContext(PseudocodeParser.NameListContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = PseudocodeParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PseudocodeParser.T__3)
            self.state = 82
            self.nameList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprList(self):
            return self.getTypedRuleContext(PseudocodeParser.ExprListContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_writeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStmt" ):
                listener.enterWriteStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStmt" ):
                listener.exitWriteStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStmt" ):
                return visitor.visitWriteStmt(self)
            else:
                return visitor.visitChildren(self)




    def writeStmt(self):

        localctx = PseudocodeParser.WriteStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_writeStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(PseudocodeParser.T__4)
            self.state = 85
            self.exprList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.NAME)
            else:
                return self.getToken(PseudocodeParser.NAME, i)

        def getRuleIndex(self):
            return PseudocodeParser.RULE_nameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameList" ):
                listener.enterNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameList" ):
                listener.exitNameList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameList" ):
                return visitor.visitNameList(self)
            else:
                return visitor.visitChildren(self)




    def nameList(self):

        localctx = PseudocodeParser.NameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(PseudocodeParser.NAME)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 88
                self.match(PseudocodeParser.T__5)
                self.state = 89
                self.match(PseudocodeParser.NAME)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.ExprContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.ExprContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = PseudocodeParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.expr(0)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 96
                self.match(PseudocodeParser.T__5)
                self.state = 97
                self.expr(0)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PseudocodeParser.ExprContext,0)


        def thenBlock(self):
            return self.getTypedRuleContext(PseudocodeParser.ThenBlockContext,0)


        def elseBlock(self):
            return self.getTypedRuleContext(PseudocodeParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = PseudocodeParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(PseudocodeParser.T__6)
            self.state = 104
            self.expr(0)
            self.state = 105
            self.match(PseudocodeParser.T__7)
            self.state = 106
            self.thenBlock()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 107
                self.match(PseudocodeParser.T__8)
                self.state = 108
                self.elseBlock()


            self.state = 111
            self.match(PseudocodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_thenBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThenBlock" ):
                listener.enterThenBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThenBlock" ):
                listener.exitThenBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThenBlock" ):
                return visitor.visitThenBlock(self)
            else:
                return visitor.visitChildren(self)




    def thenBlock(self):

        localctx = PseudocodeParser.ThenBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_thenBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511675056) != 0):
                self.state = 113
                self.stmt()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_elseBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseBlock" ):
                listener.enterElseBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseBlock" ):
                listener.exitElseBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBlock" ):
                return visitor.visitElseBlock(self)
            else:
                return visitor.visitChildren(self)




    def elseBlock(self):

        localctx = PseudocodeParser.ElseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_elseBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511675056) != 0):
                self.state = 119
                self.stmt()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PseudocodeParser.NAME, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.ExprContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.ExprContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = PseudocodeParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(PseudocodeParser.T__10)
            self.state = 126
            self.match(PseudocodeParser.NAME)
            self.state = 127
            self.match(PseudocodeParser.T__0)
            self.state = 128
            self.expr(0)
            self.state = 129
            self.match(PseudocodeParser.T__5)
            self.state = 130
            self.expr(0)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 131
                self.match(PseudocodeParser.T__5)
                self.state = 132
                self.expr(0)


            self.state = 135
            self.match(PseudocodeParser.T__11)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511675056) != 0):
                self.state = 136
                self.stmt()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(PseudocodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PseudocodeParser.ExprContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StmtContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StmtContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = PseudocodeParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(PseudocodeParser.T__12)
            self.state = 145
            self.match(PseudocodeParser.T__13)
            self.state = 146
            self.expr(0)
            self.state = 147
            self.match(PseudocodeParser.T__11)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099511675056) != 0):
                self.state = 148
                self.stmt()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            self.match(PseudocodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PseudocodeParser.ExprContext,0)

